@@ -1,3 +1,9 @@
+2001-06-07  Keith Seitz  <keiths@redhat.com>
+
+	* tracepoint.c (tracepoint_opertation): Add ui event
+	notifications.
+	(trace_pass_command): Ditto.
+	
 2001-06-07  Andrew Cagney  <ac131313@redhat.com>
 
 	* MAINTAINERS (Write After Approval): Note the entry criteria.
